2009-04-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_press_handler): Remove the
	ButtonRelease handler if we catch ButtonRelease in the loop.
	(mb_wm_decor_button_press_handler): Set up ButtonRelease handler to
	catch ButtonRelease events that are caught while we spin in the main
	loop. Also repaint the button to remove the pressed state effect if
	the handler was called. Fixes: NB#110052

2009-04-14  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.32

	* matchbox/core/mb-window-manager.c (mb_wm_sync, mb_wm_set_theme):
	Move XFlushes after XUngrabServer calls. Also, trap X errors for them
	to fix a crash Bhabani saw.

2009-04-09  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Reliability improvements.

	* comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_destroy):
	  Sync before untrapping the error; if not gdk will get it and it
	  won't appreciate it.
	* core/mb-wm-client.c (mb_wm_client_deliver_message):
	  Trap and ignore errors (BadWindow in particular) from XSendEvent().

2009-04-08  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.31

	* matchbox/core/mb-window-manager.c (mb_wm_sync, mb_wm_set_theme):
	Call XFlush before each XUngrabServer to fix a lock-up. NB#104842

2009-04-07  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.30

	* matchbox/core/mb-window-manager.c (mb_window_manager_init): Use an
	invisible pixmap instead of XFixesHideCursor to allow applications to
	show it. Fixes: NB#109073

2009-04-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Made libmatchbox2 warning-free.

	* configure.ac: Add -Werror compilation flag.
	* matchbox/core/mb-window-manager.h: Remove unused return value from
	the client_responding handler type.
	* matchbox/core/mb-wm-client.c (mb_wm_client_init): According to Mox's
	wish, increase ping timeout from 1000 to 6000 ms.

2009-04-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>
