@@ -1,3 +1,11 @@
+2009-04-17  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/core/mb-wm-client-window.h: Add name_has_markup member to
+	struct MBWMClientWindow.
+	* matchbox/core/mb-wm-client-window.c
+	(mb_wm_client_window_sync_properties): Set name_has_markup member when
+	reading the window title. Related to fix for NB#108303
+
 2009-04-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	* matchbox/core/mb-wm-decor.c (mb_wm_decor_press_handler): Remove the
